--- a/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/recent.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Sales/templates/order/recent.phtml
@@ -55,8 +55,8 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
         <div class="space-y-5 break-words">
             <?= $block->getChildHtml() ?>
             <?php foreach ($orders as $order): ?>
-                <div class="bg-white grid md:grid-cols-6 gap-4 p-5 rounded-xl">
-                    <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                <div class="bg-white grid lg:grid-cols-6 gap-4 p-5 rounded-xl">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('Order')) ?>
                         </div>
@@ -65,7 +65,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('Date')) ?>
                         </div>
@@ -88,7 +88,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('Ship to')) ?>
                         </div>
@@ -97,7 +97,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('Order total')) ?>
                         </div>
@@ -107,7 +107,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('Status')) ?>
                         </div>
@@ -116,7 +116,7 @@ if ($extraActionTitleBlocks = $block->getLayout()->getChildBlocks('order-list-ex
                         </div>
                     </div>
 
-                    <div class="grid grid-cols-2 md:flex md:flex-col md:items-end gap-2">
+                    <div class="grid grid-cols-2 lg:flex lg:flex-col md:items-end gap-2">
                         <div class="text-text-500 text-[14px] font-bold">
                             <?= $escaper->escapeHtml(__('View')) ?>
                             <?php if ($this->helper(Reorder::class)->isAllow()): ?>
