INTERNAL-16; fix designs on md screen size

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
@@ -24,8 +24,8 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 <!-- pagination-content -->
                 <?php foreach ($additionalAddresses as $address): ?>
                     <?php $i++ ?>
-                    <div class="bg-white grid md:grid-cols-6 gap-4 mt-5 p-5 rounded-xl">
-                        <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                    <div class="bg-white grid lg:grid-cols-6 gap-4 mt-5 p-5 rounded-xl">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('Company')) ?>
                             </div>
@@ -34,7 +34,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('Name')) ?>
                             </div>
@@ -44,7 +44,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('Street Address')) ?>
                             </div>
@@ -53,7 +53,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('City')) ?>
                             </div>
@@ -62,7 +62,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2 md:flex md:flex-col gap-2">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('Country')) ?>
                             </div>
@@ -71,7 +71,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-2 md:flex md:flex-col md:items-end gap-2">
+                        <div class="grid grid-cols-2 lg:flex lg:flex-col md:items-end gap-2">
                             <div class="text-text-500 text-[14px] font-bold">
                                 <?= $escaper->escapeHtml(__('Edit / Remove')) ?>
                             </div>
