--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/book.phtml
@@ -14,7 +14,7 @@ use Magento\Framework\Escaper;
     <h2 class="text-text-500 text-lg font-bold mb-5">
         <?= $escaper->escapeHtml(__('Default Addresses')) ?>
     </h2>
-    <div class="grid gap-5 md:gap-8 grid-cols-1 md:grid-cols-2">
+    <div class="grid gap-5 lg:gap-8 grid-cols-1 lg:grid-cols-2">
         <?php if ($customerDefaultBillingAddress = $block->getDefaultBilling()): ?>
             <div class="bg-white p-5 rounded-xl">
                 <h2 class="text-text-500 text-lg font-bold mb-4">
