INTERNAL-317; fix styles on medium screen

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
@@ -17,7 +17,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
 <h2 class="text-text-500 text-lg font-bold mb-5">
     <?= $escaper->escapeHtml(__('Account Information')) ?>
 </h2>
-<div class="grid gap-3 md:gap-8 grid-cols-1 lg:grid-cols-2">
+<div class="grid grid-cols-1 xl:grid-cols-2 gap-3 lg:gap-5 xl:gap-8">
     <div class="bg-white p-7 rounded-xl flex flex-col md:flex-row gap-4 md:gap-5">
         <div class="self-start flex items-center align-center gap-4">
             <div class="p-4 text-primary-500 bg-bg-500 rounded-xl">
