--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
@@ -6,18 +6,34 @@ use Hyva\Theme\ViewModel\SvgIcons;
 use Hyva\Theme\Model\ViewModelRegistry;
 use Magento\Customer\Block\Newsletter;
 use Magento\Framework\Escaper;
+use Hyva\Theme\ViewModel\ReCaptcha;
 
 /** @var Newsletter $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
 $hyvaicons = $viewModels->require(SvgIcons::class);
+
+// Do not replace this with $viewModels->require(ReCaptcha::class); that might break the dependency
+// on the Magento_ReCaptchaNewsletter module
+$recaptcha = $block->getData('viewModelRecaptcha');
 ?>
 
 <?= $block->getChildHtml('form_before') ?>
     <form class="form form-newsletter-manage"
           action="<?= $escaper->escapeUrl($block->getAction()) ?>"
           method="post"
-          id="form-validate">
+          id="newsletter-validate-detail"
+          x-data="Newsletter({
+            recaptchaValidationCode: '<?= $escaper->escapeJS($recaptcha ? $recaptcha->getValidationJsHtml(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '') ?>',
+            isCaptchaEnabled: Boolean(<?= $recaptcha ? $recaptcha->isCaptchaEnabledFor(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>),
+            recaptchaSiteKey: '<?= $recaptcha ? $recaptcha->getSiteKey(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>',
+            recaptchaFormIdNewsletter: '<?= ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER ?>',
+            recaptchaType: '<?= $recaptcha ? $recaptcha->getSelectedTypeForForm(ReCaptcha::RECAPTCHA_FORM_ID_NEWSLETTER) : '' ?>',
+            recaptchaV2InvisibleBadgePosition: '<?= $recaptcha ? $recaptcha->getRecaptchaV2InvisibleBadgePosition() : '' ?>',
+            defaultErrorMessage: '<?= __('Something went wrong with the subscription.') ?>'
+        })"
+          @submit.prevent="submitForm('/customer/account')"
+    >
         <h2 class="text-text-500 text-lg font-bold mb-5">
             <?= $escaper->escapeHtml(__('Subscription Option')) ?>
         </h2>
@@ -47,13 +63,16 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
             <button type="submit"
                     title="<?= $escaper->escapeHtmlAttr(__('Save')) ?>"
                     class="button button--filled-primary"
+                    :class="isLoading && 'button--disabled'"
+                    :disabled="isLoading"
             >
-            <span>
-                <?= $escaper->escapeHtml(__('Save')) ?>
-            </span>
+                <span x-text="isLoading ?
+                '<?= $escaper->escapeHtml(__('Saving...')) ?>' :
+                '<?= $escaper->escapeHtml(__('Save')) ?>'">Save</span>
             </button>
             <a class="button button--ghost-primary"
                href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
+               @click.prevent="fetchAndReplaceContent('<?= $escaper->escapeUrl($block->getBackUrl()) ?>')"
             >
             <span>
                 <?= $escaper->escapeHtml(__('Go back')) ?>
