--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/address/grid.phtml
@@ -86,6 +86,8 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                                 </a>
                                 <a
                                     class="text-[14px] text-primary-500 w-5 h-5"
+                                    :class="isLoading && 'button--disabled'"
+                                    :disabled="isLoading"
                                     title="<?= $escaper->escapeHtmlAttr(__('Delete')) ?>"
                                     @click.prevent="deleteAddress('<?= $address->getId() ?>',
                                     '<?= $escaper->escapeJs(__('Are you sure you want to delete this address?')) ?>')"
