--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/filter.phtml
@@ -8,21 +8,20 @@ use Magento\Framework\Escaper;
 use Magento\LayeredNavigation\Block\Navigation\FilterRenderer;
 use Hyva\Theme\ViewModel\SvgIcons;
 
-// phpcs:disable Magento2.Templates.ThisInTemplate.FoundThis
-// phpcs:disable Magento2.Templates.ThisInTemplate.FoundHelper
-
 /** @var SvgIcons $hyvaicons */
 /** @var FilterRenderer $block */
 /** @var Escaper $escaper */
 /** @var LocaleFormatter $localeFormatter */
 /** @var array $filterItems */
+/** @var string $attribute_code */
 
 $hyvaicons = $viewModels->require(SvgIcons::class);
 $catalogHelper = $this->helper(Data::class);
 
 ?>
 <div>
-    <div x-show="$store.main.isMobile" class="sticky start-0 top-0 z-10 flex flex-col gap-3 bg-bg-500 px-3 md:pt-2">
+    <!-- Filters popup header on mobile -->
+    <div class="sticky start-0 top-0 z-10 flex flex-col gap-3 bg-bg-500 px-2 md:pt-2 md:hidden">
         <div class="flex justify-between">
             <div class="flex gap-3 items-center">
                 <button
@@ -36,74 +35,87 @@ $catalogHelper = $this->helper(Data::class);
                 <h2
                     class="text-md text-text-500 transition-transform duration-300 motion-reduce:transition-none"
                 >
-                    <?= __('Sort by') ?>
+                    <?= $block->getFilterTitle() ?>
                 </h2>
             </div>
             <button
                 type="button"
                 class="button button--outline-secondary icon-button icon-button--size-xs"
                 aria-label="<?= __('Close') ?>"
-                @click="$store.popup.hidePopup('<?= $block->getFilterTitle() ?>')"
+                @click="$store.popup.hidePopup('<?= $attribute_code ?>')"
             >
                 <?= $hyvaicons->renderHtml('close'); ?>
             </button>
         </div>
-        <hr class="divider -mx-5">
+        <hr class="divider -mx-3">
     </div>
-    <ol class="items" :class="$store.main.isMobile && 'px-3'"
-        aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter options', $block->getFilterTitle())) ?>">
-        <?php foreach ($filterItems as $filterItem): ?>
-            <li>
-                <?php if ($filterItem->getCount() > 0): ?>
-                    <button @click="() => {
-                    $store.popup.hidePopup('<?= $block->getFilterTitle() ?>');
-                    _fetchPage('<?= $escaper->escapeUrl($filterItem->getUrl()) ?>');
+
+    <!-- Filter options -->
+    <article
+        class="relative px-2"
+        :aria-label="isTopLevel ? 'All filters' : 'Filter by ' + currentName?.toLowerCase()"
+    >
+        <!-- TODO: Add parent filter names & enable filters bottom popup -->
+
+        <div class="flex flex-col gap-4 pt-3 md:pb-5 md:pt-4">
+            <div role="radiogroup" aria-label="<?= $escaper->escapeHtmlAttr(__('%1 filter options', $block->getFilterTitle())) ?>">
+                <?php foreach ($filterItems as $filterItem): ?>
+                    <div class="relative h-11 w-full">
+                        <?php if ($filterItem->getCount() > 0): ?>
+                            <label class="radio mb-0 h-full w-full py-1 justify-between" for="filter-<?= $escaper->escapeHtmlAttr($filterItem->getValueString()) ?>">
+                                <div class="flex items-center">
+                                    <input
+                                        type="radio"
+                                        class="radio__input"
+                                        id="filter-<?= $escaper->escapeHtmlAttr($filterItem->getValueString()) ?>"
+                                        name="<?= $attribute_code ?>"
+                                        value="<?= $escaper->escapeHtmlAttr($filterItem->getValueString()) ?>"
+                                        aria-label="<?= $escaper->escapeHtmlAttr($filterItem->getLabel()) ?>"
+                                        @change="updateSelectedFilters('<?= $escaper->escapeUrl($filterItem->getUrl()) ?>')"
+                                    >
+                                    <span class="radio__control " aria-hidden="true"></span>
+                                    <span class="radio__label"><?= $filterItem->getLabel() ?></span>
+                                </div>
+                                <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
+                                    <span class="count text-primary">(<?= $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
+                                <?php endif; ?>
+                            </label>
+                            <?php else: ?>
+                            <span><?= $filterItem->getLabel() ?> </span>
+
+                            <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
+                                <span class="count text-primary">(<?= $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
+                            <?php endif; ?>
+                        <?php endif; ?>
+                    </div>
+                <?php endforeach ?>
+            </div>
+        </div>
+    </article>
+
+    <!-- Filters popup footer on mobile -->
+    <div class="md:hidden mb-3">
+        <div class="-top-10 end-0 start-0 h-10 bg-gradient-to-t from-bg-500 to-transparent"></div>
+        <div class="flex items-center gap-3 bg-bg-500 px-2 pb-2">
+            <button
+                type="button"
+                class="button button--outline-secondary"
+                @click="$store.popup.hidePopup('<?= $attribute_code ?>')"
+            >
+                <?= __('Reset') ?>
+            </button>
+            <!-- TODO: Make this apply selected filter -->
+            <button
+                type="button"
+                class="button button--filled-primary grow"
+                @click="() => {
+                    _fetchPage(selectedFiltersUrl);
+                    $store.popup.hidePopup('<?= $attribute_code ?>');
                     window.scrollTo({
                         top: 0,
                         behavior: 'smooth'
                     });
                 }"
-                            class="radio mb-0 h-full w-full py-3"">
-                    <span class="radio__control " aria-hidden="true"></span>
-                    <span class="radio__label text-md ">
-                        <?= /* @noEscape */
-                        $filterItem->getLabel() ?>
-                    </span>
-                    &nbsp;
-                    <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
-                        <span class="count text-primary">(<?= /* @noEscape */
-                            $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
-                    <?php endif; ?>
-                    </button>
-                <?php else: ?>
-                    <span class="flex justify-between py-1 hover:text-black">
-                    <span><?= /* @noEscape */
-                        $filterItem->getLabel() ?>
-                    </span>
-
-                    <?php if ($catalogHelper->shouldDisplayProductCountOnLayer()): ?>
-                        <span class="count text-primary">(<?= /* @noEscape */
-                            $localeFormatter->formatNumber((int)$filterItem->getCount()) ?>)</span>
-                    <?php endif; ?>
-            </span>
-                <?php endif; ?>
-            </li>
-        <?php endforeach ?>
-    </ol>
-
-    <div x-show="$store.main.isMobile" class="mb-3">
-        <div class="-top-10 end-0 start-0 h-10 bg-gradient-to-t from-bg-500 to-transparent"></div>
-        <div class="flex items-center gap-3 bg-bg-500 px-4 pb-2">
-            <button
-                type="button"
-                class="button button--outline-secondary"
-                @click="$store.popup.hidePopup('<?= $block->getFilterTitle() ?>')"
-            >
-                <?= __('Reset') ?>
-            </button>
-            <button
-                type="button"
-                class="button button--filled-primary grow"
             >
                 <?= __('Apply') ?>
             </button>
