--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -3,13 +3,10 @@
 declare(strict_types=1);
 
 use Hyva\Theme\Model\ViewModelRegistry;
-use Magento\Catalog\Model\Layer\Filter\Item;
 use Magento\Framework\Escaper;
 use Magento\LayeredNavigation\Block\Navigation;
 use Hyva\Theme\ViewModel\SvgIcons;
 use Satoshi\Theme\Block\Popup;
-
-// phpcs:disable Generic.Files.LineLength.TooLong
 
 /** @var Popup $popup */
 /** @var Navigation $block */
@@ -27,88 +24,80 @@ $filteredFilters = array_filter($filters, function ($filter) {
 });
 ?>
 <?php if ($block->canShowBlock()): ?>
-    <template x-portal="document.getElementById('toolbar-filters')">
-        <nav
-            class="overflow-x-scroll pb-4 pt-2 md:hidden" aria-label="<?= __('Available filters') ?>">
+    <div id="filters-sidebar" x-data="Filters">
+        <template x-portal="document.getElementById($store.main.isMobile ? 'toolbar-filters' : 'filters-sidebar')">
             <div
-                class="flex w-max gap-3 transition-transform duration-300 {% if isDefault %}translate-x-[-52px]{%- else -%}translate-x-0{% endif %}"
+                role="region"
+                aria-label="<?= $escaper->escapeHtmlAttr(__('Available filters')) ?>"
+                class="overflow-x-scroll max-md:pb-4 max-md:pt-2 md:overflow-hidden"
+                x-cloak
             >
-                <?= $block->getChildHtml('state') ?>
-                <?php foreach ($filteredFilters as $filter): ?>
-                    <button
-                        @click="$store.popup.showPopup('<?= $filter->getName() ?>')"
-                        type="button"
-                        aria-label="<?= __('Clear all') ?>"
-                        class="button duration-300 button--outline-secondary"
-                    >
-                        <?= $filter->getName() ?>
-                    </button>
-                    <?=
-                    $popup
-                        ->setData([
-                            'id' => $filter->getName(),
-                            'isFocused' => true,
-                            'isFullScreen' => false,
-                            'desktopTarget' => 'menu-desktop',
-                        ])
-                        ->setChildHtml($block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter))
-                        ->render()
-                    ?>
-                <?php endforeach; ?>
-            </div>
-        </nav>
-    </template>
-    <div
-        role="region"
-        aria-label="<?= $escaper->escapeHtmlAttr(__('Product filters')) ?>"
-        class="overflow-hidden w-[275px] hidden md:block"
-    >
-        <div class="w-[275px] min-w-[275px] translate-x-0 transition-transform motion-reduce:transition-none"
-             :class="$store.productList.isFiltersSidebarExpanded ? 'translate-x-0' : 'translate-x-full'"
-        >
-            <div
-                id="filters-content"
-                class="block-content filter-content hidden md:block pt-4"
-            >
-                <?= $block->getChildHtml('state') ?>
+                <div class="translate-x-0 transition-transform motion-reduce:transition-none" :class="($store.productList.isFiltersSidebarExpanded || $store.main.isMobile) ? 'translate-x-0' : 'translate-x-full'">
+                    <div class="max-md:flex max-md:w-max max-md:gap-3 transition-transform duration-300">
+                        <?= $block->getChildHtml('state') ?>
 
+                        <?php foreach ($filteredFilters as $filter): ?>
+                            <fieldset class="md:flex-1 md:border-t md:border-bg-600 md:py-5" x-data="Accordion(true, 300)">
+                                <template x-if="!$store.main.isMobile">
+                                    <div class="contents">
+                                        <div
+                                            class="group hidden h-11 w-full cursor-pointer items-center rounded-md py-3 md:flex md:px-2"
+                                            x-ref="AccordionButton"
+                                        >
+                                            <h2 class="grow text-left text-text-500">
+                                                <?= $escaper->escapeHtml(__($filter->getName())) ?>
+                                            </h2>
+                                            <button
+                                                class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable"
+                                                aria-label="<?= $escaper->escapeHtmlAttr(__($filter->getName())) ?>"
+                                            >
+                                                <span style="rotate: -180deg;" x-ref="AccordionIcon">
+                                                    <?= $hyvaicons->renderHtml('chevron-up'); ?>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <div
+                                            x-ref="AccordionPanel"
+                                            class="max-md:hidden overflow-hidden md:px-2"
+                                            :class="{
+                                                'transition-none': $store.main.isReducedMotion,
+                                                'transition': $store.main.isReducedMotion
+                                            }"
+                                        >
+                                            <?= $block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter); ?>
+                                        </div>
+                                    </div>
+                                </template>
 
-                <?php foreach ($filteredFilters as $filter): ?>
-                    <div
-                        class="flex-1 md:border-t md:border-bg-600 md:py-5"
-                        x-data="Accordion(true, 300)"
-                    >
-                        <div
-                            class="group hidden h-11 w-full cursor-pointer items-center rounded-md py-3 md:flex md:px-2"
-                            x-ref="AccordionButton"
-                        >
-                            <h2 class="grow text-left text-text-500">
-                                <?= $escaper->escapeHtml(__($filter->getName())) ?>
-                                <span class="sr-only">
-                                        <?= $escaper->escapeHtml(__('filter')) ?>
-                                    </span>
-                            </h2>
-                            <button
-                                class="button button--outline-secondary icon-button icon-button--size-xs group-hoverable"
-                                aria-label="<?= __('Sort by') ?>">
-                                        <span style="rotate: -180deg;" x-ref="AccordionIcon">
-                                            <?= $hyvaicons->renderHtml('chevron-up'); ?>
-                                        </span>
-                            </button>
-                        </div>
-                        <div
-                            x-cloak x-ref="AccordionPanel" class="overflow-hidden md:px-2"
-                            :class="{
-                                    'transition-none': $store.main.isReducedMotion,
-                                    'transition': $store.main.isReducedMotion
-                                }"
-                        >
-                            <?= /* @noEscape */
-                            $block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter); ?>
-                        </div>
+                                <template x-if="$store.main.isMobile">
+                                    <div class="contents">
+                                        <!-- Mobile filters navigation -->
+                                        <button
+                                            @click="$store.popup.showPopup('<?= $filter['attribute_model']['attribute_code'] ?>')"
+                                            type="button"
+                                            class="button duration-300 button--outline-secondary md:hidden"
+                                        >
+                                            <?= $filter->getName() ?>
+                                        </button>
+                                        <?=
+                                            $popup
+                                                ->setData([
+                                                    'id' => $filter['attribute_model']['attribute_code'],
+                                                    'isFocused' => true,
+                                                    'isFullScreen' => false,
+                                                ])
+                                                ->setChildHtml($block->getChildBlock('renderer')->setFilterTitle($filter->getName())->render($filter))
+                                                ->render()
+                                        ?>
+                                    </div>
+                                </template>
+                            </fieldset>
+                        <?php endforeach; ?>
+
                     </div>
-                <?php endforeach; ?>
+                    <div x-intersect:full="isTopFilterVisible = true" x-intersect:leave="isTopFilterVisible = false" x-morph-ignore></div>
+                </div>
             </div>
-        </div>
+        </template>
     </div>
 <?php endif; ?>
