INTERNA-37: Move hide filters button into sidebar

--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/category/banner.phtml
@@ -70,26 +70,8 @@ $height = $block->getVar('category_page_category_image/height');
       <?php endif; ?>
     </div>
 
-    <!-- Uncomment when hide filters button moved inside sidebar -->
-    <!-- <div
+    <div
       class="button button--filled-primary invisible ml-8 hidden w-[275px] min-w-[275px] md:inline-flex md:pl-2"
-    ></div> -->
-    <!-- TODO: Move inside filters sidebar -->
-    <div class="ml-8 md:pl-2">
-      <button
-        type="button"
-        class="button button--filled-primary hidden w-[275px] min-w-[275px] md:inline-flex"
-        @click="$store.productList.toggleFiltersSidebar()"
-      >
-        <span
-          x-text="$store.productList.isFiltersSidebarExpanded ? '<?= __('Hide filter') ?>' : '<?= __('Show filter') ?>'"
-        >
-          <?= __('Hide filter') ?>
-        </span>
-        <span class="button__icon ml-3 text-xl">
-          <?= $hyvaicons->renderHtml('filter'); ?>
-        </span>
-      </button>
-    </div>
+    ></div>
   </div>
 </article>
